--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "@testing-library/user-event": "^7.2.1",
     "@welldone-software/why-did-you-render": "^4.3.0",
     "muicss": "^0.10.2",
-    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-color": "^2.18.1",
     "react-dom": "^16.13.1",
@@ -37,5 +36,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "dart-sass": "^1.25.0",
+    "node-sass": "npm:dart-sass@^1.25.0"
   }
 }
